[package]
authors = ["Xavier Lau <xavier@inv.cafe>"]
description = "Unescape strings with escape sequences written out as literal characters."
edition = "2021"
homepage = "https://hack.ink/unescaper"
keywords = [
	"escape",
	"string",
	"unescape",
]
license = "GPL-3.0/MIT"
name = "unescaper"
readme = "README.md"
repository = "https://github.com/hack-ink/unescaper"
version = "0.1.6"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[dependencies]
thiserror = { version = "2.0" }
