[package]
authors = ["Hack Ink <hi@hack.ink>", "Xavier Lau <x@acg.box>"]
description = "Unescape strings with escape sequences written out as literal characters."
edition = "2024"
homepage = "https://hack.ink/unescaper"
keywords = [
	"escape",
	"string",
	"unescape",
]
license = "MIT OR GPL-3.0-only"
name = "unescaper"
readme = "README.md"
repository = "https://github.com/hack-ink/unescaper"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[dependencies]
thiserror = { version = "2.0.18" }

[dev-dependencies]
proptest = { version = "1.11.0" }
